# SpeedyPanther

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: github-ci.yml
notebooks/: fourier.ipynb  phone_recognition.ipynb  wave_forms.ipynb
speedypanther/analysis/: fourier.py
speedypanther/shared/: data_reading.py  helper.py  plot.py
speedypanther/synthesis/: wave_generation.py
tests/: test_fourier.py  test_wave_generation.py
